# cltracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  cltracer.config  cltracer.files  cltracer.includes  index.html  readme.md  style.css
cl/: analysis.cl  analysis.h  camera.cl  compact.cl  compose.sh  draw.cl  draw.h  expand.cl  geometry.cl  gsl_solver.cl  gsl_solver.h  hit.cl  hit.h  hit_info.cl  hit_info.h  intersect.cl  intersect.h  kernel.c  kernel.cl  mandelbrot_kernel.cl  matrix.cl  produce.cl  produce.h  random.cl  random.h  ray.cl  ray.h  ray_tracer_kernel.cl  solve.cl  start.cl  start.h  sweep.cl  sweep_down.cl  sweep_up.cl  utility.cl
gl/: shader.vert
opencl/: analysis.h  camera.h  color.h  draw.h  gsl_solver.h  hit.h  hit_info.h  intersect.h  kernel.c  material.h  matrix.h  opencl.h  produce.h  random.h  ray.h  start.h  sweep.h  utility.h
opencl/def/: camera.h  hit.h  hit_info.h  index.h  material.h  object.h  ray.h
opengl_shaders/: shader.frag  shader.vert
sources/: buffer_object.hpp  camera.hpp  cl  exception.hpp  gl.c  gl.h  globals.hpp  init.hpp  kernel.hpp  main.c  map.hpp  opencl.h  ray.c  ray.cpp  ray.h  source.hpp  utility.hpp  view.c  view.h  work_range.hpp
